<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:padding="10px"
	android:layout_height="fill_parent"
	android:background="@color/GiPS_background">
	
 	<ImageView android:id="@+id/picview"
		android:layout_width="wrap_content"
		android:src="@drawable/header"
		android:layout_span="2"
		android:scaleType="center"
		android:layout_gravity="center"/>

	<TextView android:id="@+id/textview01"
		android:textStyle="bold"
		android:textSize="20sp"
		android:textColor="@color/GiPS_text"
		android:text="@string/operator" 
		android:gravity="center"/>
	<EditText
		android:id="@+id/tagName"
		android:textSize="14sp"
		android:singleLine="true"
		android:textColor="@color/GiPS_text"
		android:text="op-01" 
		android:gravity="center" 
		android:maxLength="30"/>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
		
		<TableRow android:layout_weight="2"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button	
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/points"
		     		android:text="@string/trace"
		     		android:layout_weight="1"/>
		    	<Button 
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:layout_weight="1" 
				android:id="@+id/sendPoint" 
				android:text="@string/point"/>
		</TableRow>
	
		<TableRow android:layout_weight="2"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button android:layout_weight="1" 
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/urlMap"
				android:text="@string/map"/>
			<Button android:layout_weight="1" 
				android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:id="@+id/urlKeyPage"
				android:text="@string/list"/>
		</TableRow>
	
		<TableRow android:layout_weight="3"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<TextView android:layout_weight="1"
		      		android:id="@+id/distanceLabel"
				android:paddingRight="3px"
				android:textStyle="bold" 
				android:text="aaa"/>
			<TextView android:layout_weight="1"
		      		android:id="@+id/distanceValue"
				android:paddingRight="3px"
				android:textStyle="bold"
				android:text="bbb"/>
		</TableRow>  
	</LinearLayout>
</TableLayout>